# lilygo-thmi-esp-idf-project

./: .clang-format  .gitignore  Git_HELP.md  Mac_HELP.md  README.md  code.code-workspace  desktop.ini  journal.txt  partition.csv  project-log  sdkconfig.old  version
backup/: settings.json
backup/main-10.07.2025-13.07/: app_main.cpp
backup/main-14.07.2025/: CMakeLists.txt  app_main.cpp
backup/main/21-07-2025/main/: app_main.cpp
backup/main/4-08-2025/main/: app_main.cpp
backup/main/5-08-2025/main/: CMakeLists.txt  main.cpp
backup/sdkconfig-14.07.2025/: sdkconfig
demo/4.lvgl/: lv_conf.h
lib/ESP32_Resource_Monitor/: .gitignore  CMakeLists.txt  Kconfig  README.md
lib/ESP32_Resource_Monitor/include/: ResourceMonitor.h  config.h  version.h
lib/ESP32_Resource_Monitor/src/: ResourceMonitor.c
lib/one-cli-v0003/: .clangd
lib/one-cli-v0003/modules/info_cmd/: stack.c
lib/one-cli-v0003/modules/tasks_cmd/: tasks_cmd.c
main/: CMakeLists.txt  app_main.cpp  main.cpp
